--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+h3 {
+  @apply text-xl font-bold;
+}
+
+
+.overflow-scroll::-webkit-scrollbar {
+  width: 0px; /* Ukrywa pasek przewijania w WebKit */
+  background: transparent; /* Opcjonalnie */
+}
